@@ -650,11 +650,50 @@
                                 <arg>--should-stop=ifError=FLOW</arg>
                                 <arg>
                                     -Xplugin:ErrorProne \
-                                    -XepDisableWarningsInGeneratedCode \
+                                    -XepExcludedPaths:.*/generated-sources/.* \
                                     -Xep:CanIgnoreReturnValueSuggester:OFF \
                                     -Xep:NullableOnContainingClass:OFF \
                                     <!-- Suppressing EqualsGetClass due to https://github.com/google/error-prone/issues/1144 -->
                                     -Xep:EqualsGetClass:OFF \
+                                    -Xep:UnusedVariable:WARN
+                                </arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                            </compilerArgs>
+                            <annotationProcessorPaths combine.self="override">
+                                <path>
+                                    <groupId>com.google.errorprone</groupId>
+                                    <artifactId>error_prone_core</artifactId>
+                                    <version>2.36.0</version>
+                                </path>
+                            </annotationProcessorPaths>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>errorprone-strict</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <fork>true</fork>
+                            <compilerArgs combine.children="append">
+                                <arg>-XDcompilePolicy=simple</arg>
+                                <arg>--should-stop=ifError=FLOW</arg>
+                                <arg>-Xplugin:ErrorProne \
                                     -XepExcludedPaths:.*/generated-sources/.* \
                                     -Xep:BadImport:ERROR \
                                     -Xep:DefaultCharset:ERROR \
@@ -664,9 +703,7 @@
                                     -Xep:ObjectToString:ERROR \
                                     -Xep:StringCaseLocaleUsage:ERROR \
                                     -Xep:StringSplitter:ERROR \
-                                    -Xep:UnusedVariable:WARN \
-                                    -Xep:UnnecessaryLambda:ERROR
-                                </arg>
+                                    -Xep:UnnecessaryLambda:ERROR</arg>
                                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
